Adding more data tables

--- a/CreateAPSIMBarleyObservedFile.ipynb
+++ b/CreateAPSIMBarleyObservedFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 210,
    "metadata": {
     "collapsed": true
    },
@@ -24,23 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "BarleyObservedData09_10 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData09_10.txt',sep = '\\t',skiprows=[1])\n",
-    "BarleyObservedData10_11 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData10_11.txt',sep = '\\t')\n",
-    "BarleyObservedData11_12 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData11_12.txt',sep = '\\t',skiprows=[1])\n",
-    "BarleyObservedData14_15 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData14_15.txt',sep = '\\t',skiprows=[1])\n",
+    "BarleyObservedData09_10 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10Biomass.xlsx',sheetname='Sheet1')\n",
+    "BarleyObservedData10_11 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD10_11Biomass.xlsx',sheetname='Sheet1')\n",
+    "BarleyObservedData11_12 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD11_12Biomass.xlsx',sheetname='Sheet1')\n",
+    "BarleyObservedData14_15 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS14_15_Biomass.xlsx',sheetname='Sheet1')\n",
     "BarleyObservedData15_16 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData15_16.txt',sep = '\\t',skiprows=[1])\n",
     "BarleyObservedData88_89 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData88_89.txt',sep = '\\t',skiprows=[1])\n",
-    "BarleyObservedData95_96 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData95_96.txt',sep = '\\t',skiprows=[1])\n",
+    "BarleyObservedData95_96 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS95_96_Biomass.xlsx',sheetname='Sheet1')\n",
     "CPT = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\CPT.xlsx',sheetname='Sheet1')\n",
     "MCPD09_10Water = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10Water.xlsx',sheetname='SoilWater',skiprows=[1])\n",
     "MCPD10_11Water = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD10_11Water.xlsx',sheetname='SoilWater')\n",
     "MCPD11_12Water = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD11_12Water.xlsx',sheetname='SoilWater')\n",
+    "RS95_96_Water = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS95_96_Water.xlsx',sheetname='Sheet1')\n",
+    "RS88_89_Water = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS88_89_Water.xlsx',sheetname='Sheet1')\n",
     "MCPD09_10Cover = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10Cover.xlsx',sheetname='Cover')\n",
     "MCPD10_11Cover = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD10_11Cover.xlsx',sheetname='Sheet1')\n",
     "MCPD11_12Cover = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD11_12Cover.xlsx',sheetname='Sheet1')\n",
@@ -50,12 +52,13 @@
     "RS14_15CoverTotal = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS14_15CoverTotal.xlsx',sheetname='Sheet1')\n",
     "MCPD11_12Leaves = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD11_12Leaves.xlsx',sheetname='Sheet1')\n",
     "MCPD09_10Nitrogen = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10Nitrogen.xlsx',sheetname='Sheet1')\n",
-    "MCPD09_10SoilNFinal= pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10SoilNFinal.xlsx',sheetname='Sheet1')"
+    "MCPD09_10SoilNFinal= pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10SoilNFinal.xlsx',sheetname='Sheet1')\n",
+    "RS2014_15_Zadok = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS14_15_Zadok.xlsx',sheetname='Sheet1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -63,10 +66,10 @@
    "source": [
     "AllDataTabs = [BarleyObservedData09_10,BarleyObservedData10_11,BarleyObservedData11_12,\n",
     "               BarleyObservedData14_15, BarleyObservedData15_16,BarleyObservedData88_89, \n",
-    "               BarleyObservedData95_96, CPT,MCPD09_10Water,MCPD10_11Water,\n",
-    "               MCPD11_12Water,MCPD09_10Cover,MCPD10_11Cover,MCPD11_12Cover,AussieData,\n",
+    "               BarleyObservedData95_96, CPT,MCPD09_10Water,MCPD10_11Water,RS88_89_Water,\n",
+    "               MCPD11_12Water,RS95_96_Water, MCPD09_10Cover,MCPD10_11Cover,MCPD11_12Cover,AussieData,\n",
     "               RS2014_15VWC_layers,RS14_15CoverGreen,RS14_15CoverTotal,MCPD11_12Leaves,\n",
-    "               MCPD09_10Nitrogen,MCPD09_10SoilNFinal]\n",
+    "               MCPD09_10Nitrogen,MCPD09_10SoilNFinal,RS2014_15_Zadok]\n",
     "               "
    ]
   },
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 217,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 220,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
