--- a/CreateAPSIMBarleyObservedFile.ipynb
+++ b/CreateAPSIMBarleyObservedFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
     "BarleyObservedData10_11 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD10_11Biomass.xlsx',sheetname='Sheet1')\n",
     "BarleyObservedData11_12 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD11_12Biomass.xlsx',sheetname='Sheet1')\n",
     "BarleyObservedData14_15 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS14_15_Biomass.xlsx',sheetname='Sheet1')\n",
-    "BarleyObservedData15_16 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData15_16.txt',sep = '\\t',skiprows=[1])\n",
+    "BarleyObservedData15_16 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\LUDF2015_16_Biomass.xlsx',sheetname='Sheet1')\n",
     "BarleyObservedData88_89 = pd.read_csv('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\BarleyObservedData88_89.txt',sep = '\\t',skiprows=[1])\n",
     "BarleyObservedData95_96 = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS95_96_Biomass.xlsx',sheetname='Sheet1')\n",
     "CPT = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\CPT.xlsx',sheetname='Sheet1')\n",
@@ -53,12 +53,16 @@
     "MCPD11_12Leaves = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD11_12Leaves.xlsx',sheetname='Sheet1')\n",
     "MCPD09_10Nitrogen = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10Nitrogen.xlsx',sheetname='Sheet1')\n",
     "MCPD09_10SoilNFinal= pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\MCPD09_10SoilNFinal.xlsx',sheetname='Sheet1')\n",
-    "RS2014_15_Zadok = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS14_15_Zadok.xlsx',sheetname='Sheet1')"
+    "RS2014_15_Zadok = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\RS14_15_Zadok.xlsx',sheetname='Sheet1')\n",
+    "ABlock99_00_LeafApp = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\ABlock99_00_LeafApp.xlsx',sheetname='Sheet1')\n",
+    "ABlock99_00_BiomassEar = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\ABlock99_00_BiomassEar.xlsx',sheetname='Sheet1')\n",
+    "ABlock99_00_BiomassHarvest = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\ABlock99_00_BiomassHarvest.xlsx',sheetname='Sheet1')\n",
+    "ABlock99_00_BiomassEarly = pd.read_excel('D:\\GitHubRepos\\ApsimX\\Prototypes\\Barley\\Observations\\ABlock99_00_BiomassEarly.xlsx',sheetname='Sheet1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +73,8 @@
     "               BarleyObservedData95_96, CPT,MCPD09_10Water,MCPD10_11Water,RS88_89_Water,\n",
     "               MCPD11_12Water,RS95_96_Water, MCPD09_10Cover,MCPD10_11Cover,MCPD11_12Cover,AussieData,\n",
     "               RS2014_15VWC_layers,RS14_15CoverGreen,RS14_15CoverTotal,MCPD11_12Leaves,\n",
-    "               MCPD09_10Nitrogen,MCPD09_10SoilNFinal,RS2014_15_Zadok]\n",
+    "               MCPD09_10Nitrogen,MCPD09_10SoilNFinal,RS2014_15_Zadok,ABlock99_00_LeafApp,\n",
+    "               ABlock99_00_BiomassEar,ABlock99_00_BiomassHarvest,ABlock99_00_BiomassEarly]\n",
     "               "
    ]
   },
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -155,16 +160,18 @@
     "def MakeMean(ser):\n",
     "    Series = pd.Series(index=ser.columns)\n",
     "    for Group in ser.columns:\n",
-    "        if isinstance(Group, float):\n",
-    "            Series[Group] = ser[Group].mean()\n",
-    "        else:\n",
-    "            Series[Group] = Counter(ser[Group]).most_common(1)[0][0]\n",
-    "    return Series        "
+    "        data = ser[Group].dropna()\n",
+    "        if len(data) > 0:\n",
+    "            if isinstance(data.values[0], float):\n",
+    "                Series[Group] = data.mean()\n",
+    "            else:\n",
+    "                Series[Group] = Counter(data).most_common(1)[0][0]\n",
+    "    return Series    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -203,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
