Updating files, not certian why these ones have changed

--- a/CreateAPSIMPotatoObservedFile.ipynb
+++ b/CreateAPSIMPotatoObservedFile.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -24,25 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "V1_Observations = pd.read_csv('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\potato_observations.txt',delim_whitespace=True,skiprows = [1],na_values='*')\n",
-    "Cultivar_Nodes = pd.read_csv('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\cultivar_nodenumber.txt',delim_whitespace=True,skiprows = [1])\n",
-    "RadInt = pd.read_csv('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\Potato_radint_observations.txt',delim_whitespace=True,skiprows = [1])\n",
-    "SubStore = pd.read_excel('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\SubStoreObservations.xlsx')\n",
-    "Tassy = pd.read_excel('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\Tassy.xlsx')"
+    "V1_Observations = pd.read_csv(r'C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\potato_observations.txt',delim_whitespace=True,skiprows = [1],na_values='*')\n",
+    "Cultivar_Nodes = pd.read_csv(r'C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\cultivar_nodenumber.txt',delim_whitespace=True,skiprows = [1])\n",
+    "RadInt = pd.read_csv(r'C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\Potato_radint_observations.txt',delim_whitespace=True,skiprows = [1])\n",
+    "SubStore = pd.read_excel(r'C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\SubStoreObservations.xlsx')\n",
+    "Tassy = pd.read_excel(r'C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed\\Tassy.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "AllDataTabs = [V1_Observations,\n",
@@ -61,10 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ColumnIndex = V1_Observations.columns\n",
@@ -81,17 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda\\lib\\site-packages\\pandas\\core\\indexing.py:630: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item_labels[indexer[info_axis]]] = value\n"
+     ]
+    }
+   ],
    "source": [
-    "RowIndexData = V1_Observations.ix[:,V1_Observations.columns.isin(['SimulationName','Clock.Today'])]\n",
+    "RowIndexData = V1_Observations.loc[:,V1_Observations.columns.isin(['SimulationName','Clock.Today'])]\n",
     "for Table in AllDataTabs:\n",
-    "    RowIndexData = pd.concat([RowIndexData,Table.ix[:,Table.columns.isin(['SimulationName','Clock.Today'])]],axis=0)\n",
+    "    RowIndexData = pd.concat([RowIndexData,Table.loc[:,Table.columns.isin(['SimulationName','Clock.Today'])]],axis=0)\n",
     "RowIndex = RowIndexData.drop_duplicates()\n",
-    "RowIndex.loc[:,'Clock.Today'] = pd.to_datetime(RowIndex.ix[:,'Clock.Today'])\n",
+    "RowIndex.loc[:,'Clock.Today'] = pd.to_datetime(RowIndex.loc[:,'Clock.Today'])\n",
     "RowIndex.set_index(['SimulationName','Clock.Today'],inplace=True)"
    ]
   },
@@ -104,25 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ObsDataFrame = pd.DataFrame(index=RowIndex.index, columns=ColumnIndex)\n",
     "## Drop index columns \n",
     "ObsDataFrame.drop(['SimulationName','Clock.Today'],axis=1,inplace=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -153,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "CompressedData = []\n",
@@ -169,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for DataTable in range(len(CompressedData)):\n",
@@ -181,34 +169,32 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ObsDataFrame.to_excel('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\Observed.xlsx',merge_cells=False,sheet_name='Observed')"
+    "ObsDataFrame.to_excel('C:\\Users\\cflhxb\\Dropbox\\APSIMPotato\\ObservedTest.xlsx',merge_cells=False,sheet_name='Observed')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
