--- a/SubStoreWeatherFiles.ipynb
+++ b/SubStoreWeatherFiles.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 410,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -144,7 +147,10 @@
    "cell_type": "code",
    "execution_count": 458,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -251,9 +257,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
